1.1 (unreleased)
----------------

- fix: setup.py not working under some environments (`open` used wrong codec)
- add SellerProfile model


1.0
---

- First release